# CCPixelCraft

./: .gitignore  CMakeLists.txt  README.md
Core/: main.cpp
Core/ImageHolder/: ImageHolder.cpp  ImageHolder.h
Core/ImageImporter/: ImageImporter.cpp  ImageImporter.h
Core/StatusBarInfoManager/: StatusBarInfoManager.cpp  StatusBarInfoManager.h
Core/Utils/convertor/: image_convertor.cpp  image_convertor.h
Core/predef/: predef.h
Sources/: sources.qrc
Test/: CMakeLists.txt
Test/TestImport/: tst_testlocalimport.cpp
Ui/: UiUtils.cpp  UiUtils.h
Ui/ActionMonitor/: eventhandlefunctor.cpp  eventhandlefunctor.h
Ui/ActionMonitor/KeyboardMonitor/: keyboardmonitor.cpp  keyboardmonitor.h
Ui/ActionMonitor/MouseMonitor/: mousemonitor.cpp  mousemonitor.h
Ui/Components/DisplayLabel/: DisplayLabel.cpp  DisplayLabel.h
Ui/Components/PreviewLabel/: PreviewLabel.cpp  PreviewLabel.h
Ui/ImageInfoWidget/: ImageInfoTools.cpp  ImageInfoTools.h  ImageInfoWidget.cpp  ImageInfoWidget.h  ImageInfoWidget.ui
Ui/MainWindow/: CCImageMainWindow.cpp  CCImageMainWindow.h  CCImageMainWindow.ui  UiMainWindowInitializer.cpp  UiMainWindowInitializer.h
Ui/OperateWidgetManage/: OperateWidgetManage.cpp  OperateWidgetManage.h
Ui/SizeManager/: SizeManager.cpp  SizeManager.h
Ui/WindowHelper/: windoweventhelper.cpp  windoweventhelper.h
develop_example/documentations/: README.md
develop_example/documentations/tutorial/Chinese/: 0_opencv的样例.md  cv_Mat的使用.md  如何使用 OpenCV 扫描图像、查找表和时间测量.md
develop_example/documentations/tutorial/English/: How to Scan Images, Lookup Tables, and Time Measurements Using OpenCV.md  Mat usage.md  beginners.md
develop_example/examples/: CMakeLists.txt  CMakeLists_CommonTemplate.txt  README.md  create_example.ps1  example_common.cpp  example_common.h.in
develop_example/examples/basic_usage/: basic_usage.cpp
develop_example/examples/beginners/: beginners.cpp
develop_example/examples/cvtcolor/: CMakeLists.txt  cvtcolor.cpp
develop_example/examples/imread/: imread.cpp
develop_example/examples/scan_image/: CMakeLists.txt  scan_image.cpp
